# fastest

./: .coveragerc  .gitignore  .travis.yml  README.md  experiment_00__generate_dict_from_bitstr.ipynb  main.py  pyproject.toml  requirements.txt
core/bodies/: f.py
core/code_assets/: arguments.py  conditionals.py  function.py  variables.py
core/compiler/: compile.py
core/io/: read_file.py
core/type/: type_inference.py  type_usage_patterns.py
experiments/: experiment_01__plot_function_args_vs_output.ipynb
fastest/: __init__.py  __main__.py  constants.py  utils.py
fastest/bodies/: __init__.py  f.py  test_case_template_builder.py  testers_notes.py
fastest/case_labyrinth/: __init__.py
fastest/cli/: args.py
fastest/code_assets/: __init__.py  arguments.py  conditionals.py  function.py  keywords.py  naive_case_detector.py  return_value.py  variables.py
fastest/code_style/: __init__.py  control_overuse.py  depth_metric.py
fastest/compiler/: compile.py  compile_tests.py
fastest/file_handler/: __init__.py  coverage_path.py  ignore_paths.py  (+5 more)
fuzzer/: __main__.py
logger/: logger.py
test/: arguments__test.py  conditionals__test.py  control_overuse__test.py  depth_metric__test.py  function__test.py  naive_case_detector__test.py  return_value__test.py  test__compile_tests.py  test__f.py  test__function.py  test__json_schema.py  test__naive_case_detector.py  test__test_case_template_builder.py  test__type_inference.py  test__type_usage_patterns.py  test__utils.py  type_check__test.py  type_inference__test.py  type_usage_patterns__test.py  variables__test.py
(+25 files in other folders)
