[tool.poetry]
name = "fastest"
version = "0.0.9"
description = "Automate tests via docstrings and more"
authors = ["AmreshVenugopal <amresh.venugopal@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AmreshVenugopal/fastest"


[tool.poetry.scripts]
fastest = "fastest.__main__:main"

[tool.poetry.dependencies]
python = "^3.5"
watchdog = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

packages = [
    { include="fastest", from="." },
]
