[tool.poetry]
name = "fastest"
version = "0.3.1"
description = "Automate tests via docstrings and more"
authors = ["AmreshVenugopal <amresh.venugopal@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AmreshVenugopal/fastest"


[tool.poetry.scripts]
fastest = "fastest.__main__:main"
fuzz = "fuzzer.__main__:test_apis"

[tool.poetry.dependencies]
python = "^3.5"
watchdog = "^0.9.0"
coverage = "^4.5"
coloredlogs = "^10.0"
pytest = "^4.2"
pytest-cov = "^2.6"
pytrace = "^0.2.4"
requests = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

packages = [
    { include="fastest", from="." },
    { exclude="experiments", from="."}
]
